CRUD operations done

--- a/TheBookDenWeb/appsettings.json
+++ b/TheBookDenWeb/appsettings.json
@@ -1,9 +1,12 @@
-{
+ {
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=A1-VIC-PC03\\A1SQLSERVER;Uid=A1ADMIN;Pwd=A1recycled;Database=TheBookDen;TrustServerCertificate=True"
+  }
+ }
