--- a/TheBookDenWeb/TheBookDenWeb.csproj
+++ b/TheBookDenWeb/TheBookDenWeb.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TheBookDen.DataAccess\TheBookDen.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
